--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                         
                     </li>
                 </ul>
-                <button type="button" class="btn" onclick="location.href='csList.html';">로그인</button>
+                <button type="button" class="btn" onclick="location.href='CsList.html';">로그인</button>
             </section>
         </article>
     </main>
