--- a/OneOneList.html
+++ b/OneOneList.html
@@ -42,7 +42,7 @@
                                 </tr>
                             </thead>
                             <tbody class="cursor">
-                                <tr onclick="location.href='OneOneview.html'">
+                                <tr onclick="location.href='OneOneView.html'">
                                     <td>1</td>
                                     <td class="txt-left">문의드립니다 [1]</td>
                                     <td>giftn01</td>
