--- a/OneOneWrite.html
+++ b/OneOneWrite.html
@@ -37,7 +37,7 @@
             
              <div class="btn-2set-half">             
                 <button type="button" class="btn btn-trans" onclick="location.href='OneOneList.html'">저장</button>
-                <button type="button" class="btn" onclick="location.href='OneOneWrite.html'">목록으로</button>
+                <button type="button" class="btn" onclick="location.href='OneOneList.html'">목록으로</button>
             </div>
             
         </article>
