--- a/OneOneWrite.html
+++ b/OneOneWrite.html
@@ -29,8 +29,9 @@
                 <div class="board-write">
                     <input type="text" class="write-title"placeholder="제목">                    
                 </div>                    
-                <div class="board-write-content">
-                    <textarea></textarea>
+                <div class="board-write-content commuEditbox">
+                    <textarea></textarea>         
+                    <!-- 에디터 자리            -->
                 </div>
      
             </section>           
